kompose.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kompose.yaml
      kompose.version: 1.19.0 (f63a961c)
    creationTimestamp: null
    labels:
      io.kompose.service: maana-money-js
    name: maana-money-js
  spec:
    ports:
    - name: "8050"
      port: 8050
      targetPort: 8050
    selector:
      io.kompose.service: maana-money-js
  status:
    loadBalancer: {}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kompose.yaml
      kompose.version: 1.19.0 (f63a961c)
    creationTimestamp: null
    labels:
      io.kompose.service: maana-money-js
    name: maana-money-js
  spec:
    replicas: 1
    strategy: {}
    template:
      metadata:
        annotations:
          kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kompose.yaml
          kompose.version: 1.19.0 (f63a961c)
        creationTimestamp: null
        labels:
          io.kompose.service: maana-money-js
      spec:
        containers:
        - env:
          - name: APPLICATION_NAME
            value: maana-money-js
          - name: CKG_ENDPOINT_URL
          - name: CKG_SUBSCRIPTION_ENDPOINT_URL
          - name: DOCKER_REGISTRY
            value: services.azurecr.io
          - name: EXPOSED_PORT
            value: "8050"
          - name: PORT
            value: "8050"
          - name: PUBLICNAME
            value: localhost
          - name: REACT_APP_PORTAL_AUTH_CLIENT_ID
          - name: REACT_APP_PORTAL_AUTH_CLIENT_SECRET
          - name: REACT_APP_PORTAL_AUTH_DOMAIN
          - name: REACT_APP_PORTAL_AUTH_IDENTIFIER
          - name: REACT_APP_PORTAL_AUTH_PROVIDER
          - name: SERVICE_ID
            value: '''maana-money-js'''
          - name: VERSION_TAG
            value: v0.0.1
          image: services.azurecr.io/maana-money-js:v0.0.1
          name: maana-money-js
          ports:
          - containerPort: 8050
          resources: {}
        restartPolicy: Always
  status: {}
kind: List
metadata: {}
