istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: maana-money-js
spec:
  ports:
  - port: 8050
    name: http
  selector:
    app: maana-money-js
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maana-money-js-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maana-money-js
      version: v1
  template:
    metadata:
      labels:
        app: maana-money-js
        version: v1
    spec:
      containers:
      - name: maana-money-js
        image: services.azurecr.io/maana-money-js:0.0.9
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8050
          name: http-port
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: maana-money-js
spec:
  hosts:
  - "*"
  gateways:
  - graphql-gateway
  http:
  - match:
    - uri:
        exact: /maana-money-js/graphql    
    route:
    - destination:
        host: maana-money-js
        port:
          number: 8050
